yaml-examples/reactive-resume/reactive-resume-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: reactive-resume
  namespace: default
spec:
  selector:
    app: reactive-resume
  ports:
  - name: web
    port: 80
    targetPort: 80
